bison_spec.output
Terminals unused in grammar

    BIN
    OCT
    HEX
    DEC


State 23 conflicts: 2 shift/reduce, 19 reduce/reduce
State 24 conflicts: 2 shift/reduce
State 25 conflicts: 1 shift/reduce
State 28 conflicts: 2 shift/reduce, 19 reduce/reduce
State 29 conflicts: 3 shift/reduce
State 30 conflicts: 1 shift/reduce
State 32 conflicts: 1 reduce/reduce
State 33 conflicts: 1 shift/reduce
State 34 conflicts: 1 shift/reduce
State 39 conflicts: 6 shift/reduce
State 40 conflicts: 2 shift/reduce, 19 reduce/reduce
State 41 conflicts: 6 shift/reduce
State 42 conflicts: 2 shift/reduce, 19 reduce/reduce
State 43 conflicts: 6 shift/reduce
State 44 conflicts: 2 shift/reduce, 19 reduce/reduce
State 48 conflicts: 2 shift/reduce, 28 reduce/reduce
State 49 conflicts: 2 shift/reduce, 19 reduce/reduce
State 50 conflicts: 2 shift/reduce, 25 reduce/reduce
State 51 conflicts: 2 shift/reduce, 19 reduce/reduce
State 56 conflicts: 4 reduce/reduce
State 59 conflicts: 1 shift/reduce
State 61 conflicts: 3 shift/reduce, 12 reduce/reduce
State 62 conflicts: 3 shift/reduce, 6 reduce/reduce
State 63 conflicts: 1 shift/reduce
State 99 conflicts: 3 shift/reduce
State 102 conflicts: 2 shift/reduce, 13 reduce/reduce
State 104 conflicts: 2 shift/reduce, 8 reduce/reduce
State 105 conflicts: 4 reduce/reduce
State 117 conflicts: 3 shift/reduce, 19 reduce/reduce
State 118 conflicts: 1 shift/reduce
State 119 conflicts: 2 shift/reduce
State 120 conflicts: 3 shift/reduce, 19 reduce/reduce
State 121 conflicts: 1 shift/reduce, 19 reduce/reduce
State 122 conflicts: 6 shift/reduce
State 123 conflicts: 1 shift/reduce, 19 reduce/reduce
State 124 conflicts: 1 shift/reduce, 19 reduce/reduce
State 125 conflicts: 19 reduce/reduce
State 139 conflicts: 2 shift/reduce
State 140 conflicts: 2 shift/reduce, 19 reduce/reduce
State 141 conflicts: 2 shift/reduce, 19 reduce/reduce
State 142 conflicts: 1 shift/reduce, 19 reduce/reduce
State 143 conflicts: 1 shift/reduce, 19 reduce/reduce
State 144 conflicts: 19 reduce/reduce
State 145 conflicts: 1 shift/reduce
State 158 conflicts: 6 shift/reduce
State 159 conflicts: 3 shift/reduce, 19 reduce/reduce
State 160 conflicts: 6 shift/reduce
State 161 conflicts: 3 shift/reduce, 19 reduce/reduce
State 162 conflicts: 6 shift/reduce
State 163 conflicts: 1 shift/reduce, 19 reduce/reduce
State 164 conflicts: 6 shift/reduce
State 165 conflicts: 1 shift/reduce, 19 reduce/reduce
State 166 conflicts: 6 shift/reduce
State 167 conflicts: 1 shift/reduce, 19 reduce/reduce
State 168 conflicts: 6 shift/reduce
State 169 conflicts: 19 reduce/reduce
State 170 conflicts: 1 shift/reduce, 4 reduce/reduce
State 171 conflicts: 4 reduce/reduce
State 172 conflicts: 6 shift/reduce
State 173 conflicts: 1 shift/reduce
State 174 conflicts: 1 shift/reduce
State 175 conflicts: 2 shift/reduce, 19 reduce/reduce
State 176 conflicts: 3 shift/reduce
State 178 conflicts: 2 shift/reduce, 19 reduce/reduce


Grammar

    0 $accept: calculator $end

    1 calculator: stmnt_list

    2 stmnt_list: expr '\n' stmnt_list
    3           | COMM '\n' stmnt_list
    4           | ε

    5 expr: arit_expr
    6     | bool_expr
    7     | str_expr
    8     | ID ASSIGN str_expr

    9 arit_expr: start_int_expr
   10          | start_float_expr
   11          | ID ASSIGN int_expr
   12          | ID ASSIGN float_expr

   13 start_int_expr: int_expr

   14 int_expr: LEN str_expr
   15         | SUB int_expr
   16         | ADD int_expr
   17         | int_expr ADD int_term
   18         | int_expr SUB int_term
   19         | int_term

   20 int_term: int_term MUL int_pow
   21         | int_term MOD int_pow
   22         | int_pow

   23 int_pow: int_pow POW int_factor
   24        | int_factor

   25 int_factor: INT
   26           | int_expr
   27           | '(' int_expr ')'

   28 start_float_expr: float_expr

   29 float_expr: SUB float_expr
   30           | ADD float_expr
   31           | float_expr ADD float_term
   32           | start_int_expr ADD float_term
   33           | float_expr ADD start_int_expr
   34           | float_expr SUB float_term
   35           | start_int_expr SUB float_term
   36           | float_expr SUB start_int_expr
   37           | float_term

   38 float_term: float_term MUL float_pow
   39           | start_int_expr MUL float_pow
   40           | float_term MUL start_int_expr
   41           | float_term DIV float_pow
   42           | start_int_expr DIV start_int_expr
   43           | start_int_expr DIV float_pow
   44           | float_term DIV start_int_expr
   45           | float_term MOD float_pow
   46           | start_int_expr MOD float_pow
   47           | float_term MOD start_int_expr
   48           | float_pow

   49 float_pow: float_pow POW float_factor
   50          | start_int_expr POW float_factor
   51          | float_pow POW start_int_expr
   52          | float_factor

   53 float_factor: FLOAT
   54             | PI
   55             | E
   56             | SIN float_expr
   57             | SIN start_int_expr
   58             | COS float_expr
   59             | COS start_int_expr
   60             | TAN float_expr
   61             | TAN start_int_expr
   62             | float_expr
   63             | '(' float_expr ')'

   64 bool_expr: start_int_expr HIG start_int_expr
   65          | start_int_expr HEQ start_int_expr
   66          | start_int_expr LOW start_int_expr
   67          | start_int_expr LEQ start_int_expr
   68          | start_int_expr EQU start_int_expr
   69          | start_int_expr NEQ start_int_expr
   70          | start_float_expr HIG start_float_expr
   71          | start_float_expr HEQ start_float_expr
   72          | start_float_expr LOW start_float_expr
   73          | start_float_expr LEQ start_float_expr
   74          | start_float_expr EQU start_float_expr
   75          | start_float_expr NEQ start_float_expr
   76          | start_int_expr HIG start_float_expr
   77          | start_int_expr HEQ start_float_expr
   78          | start_int_expr LOW start_float_expr
   79          | start_int_expr LEQ start_float_expr
   80          | start_int_expr EQU start_float_expr
   81          | start_int_expr NEQ start_float_expr
   82          | start_float_expr HIG start_int_expr
   83          | start_float_expr HEQ start_int_expr
   84          | start_float_expr LOW start_int_expr
   85          | start_float_expr LEQ start_int_expr
   86          | start_float_expr EQU start_int_expr
   87          | start_float_expr NEQ start_int_expr
   88          | bool_orr

   89 bool_orr: bool_orr ORR bool_and
   90         | bool_and

   91 bool_and: bool_and AND bool_not
   92         | bool_not

   93 bool_not: NOT bool_term
   94         | bool_term

   95 bool_term: BOOL
   96          | ID ASSIGN bool_expr
   97          | bool_expr
   98          | '(' bool_expr ')'

   99 str_expr: STRING
  100         | str_expr ADD str_expr
  101         | str_expr ADD start_int_expr
  102         | start_int_expr ADD str_expr
  103         | str_expr ADD start_float_expr
  104         | start_float_expr ADD str_expr
  105         | SUBSTR str_expr start_int_expr start_int_expr


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 2 3
    '(' (40) 27 63 98
    ')' (41) 27 63 98
    error (256)
    INT <ival> (258) 25
    BOOL <ival> (259) 95
    FLOAT <fval> (260) 53
    PI <fval> (261) 54
    E <fval> (262) 55
    SIN <fval> (263) 56 57
    COS <fval> (264) 58 59
    TAN <fval> (265) 60 61
    STRING <sval> (266) 99
    ID <sval> (267) 8 11 12 96
    COMM (268) 3
    ASSIGN (269) 8 11 12 96
    ADD (270) 16 17 30 31 32 33 100 101 102 103 104
    SUB (271) 15 18 29 34 35 36
    MUL (272) 20 38 39 40
    DIV (273) 41 42 43 44
    MOD (274) 21 45 46 47
    POW (275) 23 49 50 51
    HIG (276) 64 70 76 82
    HEQ (277) 65 71 77 83
    LOW (278) 66 72 78 84
    LEQ (279) 67 73 79 85
    EQU (280) 68 74 80 86
    NEQ (281) 69 75 81 87
    NOT (282) 93
    AND (283) 91
    ORR (284) 89
    LEN (285) 14
    SUBSTR (286) 105
    BIN (287)
    OCT (288)
    HEX (289)
    DEC (290)


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    calculator (40)
        on left: 1
        on right: 0
    stmnt_list (41)
        on left: 2 3 4
        on right: 1 2 3
    expr (42)
        on left: 5 6 7 8
        on right: 2
    arit_expr (43)
        on left: 9 10 11 12
        on right: 5
    start_int_expr <ival> (44)
        on left: 13
        on right: 9 32 33 35 36 39 40 42 43 44 46 47 50 51 57 59 61 64 65 66 67 68 69 76 77 78 79 80 81 82 83 84 85 86 87 101 102 105
    int_expr <ival> (45)
        on left: 14 15 16 17 18 19
        on right: 11 13 15 16 17 18 26 27
    int_term <ival> (46)
        on left: 20 21 22
        on right: 17 18 19 20 21
    int_pow <ival> (47)
        on left: 23 24
        on right: 20 21 22 23
    int_factor <ival> (48)
        on left: 25 26 27
        on right: 23 24
    start_float_expr <fval> (49)
        on left: 28
        on right: 10 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 103 104
    float_expr <fval> (50)
        on left: 29 30 31 32 33 34 35 36 37
        on right: 12 28 29 30 31 33 34 36 56 58 60 62 63
    float_term <fval> (51)
        on left: 38 39 40 41 42 43 44 45 46 47 48
        on right: 31 32 34 35 37 38 40 41 44 45 47
    float_pow <fval> (52)
        on left: 49 50 51 52
        on right: 38 39 41 43 45 46 48 49 51
    float_factor <fval> (53)
        on left: 53 54 55 56 57 58 59 60 61 62 63
        on right: 49 50 52
    bool_expr <ival> (54)
        on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88
        on right: 6 96 97 98
    bool_orr <ival> (55)
        on left: 89 90
        on right: 88 89
    bool_and <ival> (56)
        on left: 91 92
        on right: 89 90 91
    bool_not <ival> (57)
        on left: 93 94
        on right: 91 92
    bool_term <ival> (58)
        on left: 95 96 97 98
        on right: 93 94
    str_expr <sval> (59)
        on left: 99 100 101 102 103 104 105
        on right: 7 8 14 100 101 102 103 104 105


State 0

    0 $accept: • calculator $end

    INT     shift, and go to state 1
    BOOL    shift, and go to state 2
    FLOAT   shift, and go to state 3
    PI      shift, and go to state 4
    E       shift, and go to state 5
    SIN     shift, and go to state 6
    COS     shift, and go to state 7
    TAN     shift, and go to state 8
    STRING  shift, and go to state 9
    ID      shift, and go to state 10
    COMM    shift, and go to state 11
    ADD     shift, and go to state 12
    SUB     shift, and go to state 13
    NOT     shift, and go to state 14
    LEN     shift, and go to state 15
    SUBSTR  shift, and go to state 16
    '('     shift, and go to state 17

    $default  reduce using rule 4 (stmnt_list)

    calculator        go to state 18
    stmnt_list        go to state 19
    expr              go to state 20
    arit_expr         go to state 21
    start_int_expr    go to state 22
    int_expr          go to state 23
    int_term          go to state 24
    int_pow           go to state 25
    int_factor        go to state 26
    start_float_expr  go to state 27
    float_expr        go to state 28
    float_term        go to state 29
    float_pow         go to state 30
    float_factor      go to state 31
    bool_expr         go to state 32
    bool_orr          go to state 33
    bool_and          go to state 34
    bool_not          go to state 35
    bool_term         go to state 36
    str_expr          go to state 37


State 1

   25 int_factor: INT •

    $default  reduce using rule 25 (int_factor)


State 2

   95 bool_term: BOOL •

    $default  reduce using rule 95 (bool_term)


State 3

   53 float_factor: FLOAT •

    $default  reduce using rule 53 (float_factor)


State 4

   54 float_factor: PI •

    $default  reduce using rule 54 (float_factor)


State 5

   55 float_factor: E •

    $default  reduce using rule 55 (float_factor)


State 6

   56 float_factor: SIN • float_expr
   57             | SIN • start_int_expr

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 3
    PI     shift, and go to state 4
    E      shift, and go to state 5
    SIN    shift, and go to state 6
    COS    shift, and go to state 7
    TAN    shift, and go to state 8
    ADD    shift, and go to state 12
    SUB    shift, and go to state 13
    LEN    shift, and go to state 15
    '('    shift, and go to state 38

    start_int_expr  go to state 39
    int_expr        go to state 23
    int_term        go to state 24
    int_pow         go to state 25
    int_factor      go to state 26
    float_expr      go to state 40
    float_term      go to state 29
    float_pow       go to state 30
    float_factor    go to state 31


State 7

   58 float_factor: COS • float_expr
   59             | COS • start_int_expr

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 3
    PI     shift, and go to state 4
    E      shift, and go to state 5
    SIN    shift, and go to state 6
    COS    shift, and go to state 7
    TAN    shift, and go to state 8
    ADD    shift, and go to state 12
    SUB    shift, and go to state 13
    LEN    shift, and go to state 15
    '('    shift, and go to state 38

    start_int_expr  go to state 41
    int_expr        go to state 23
    int_term        go to state 24
    int_pow         go to state 25
    int_factor      go to state 26
    float_expr      go to state 42
    float_term      go to state 29
    float_pow       go to state 30
    float_factor    go to state 31


State 8

   60 float_factor: TAN • float_expr
   61             | TAN • start_int_expr

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 3
    PI     shift, and go to state 4
    E      shift, and go to state 5
    SIN    shift, and go to state 6
    COS    shift, and go to state 7
    TAN    shift, and go to state 8
    ADD    shift, and go to state 12
    SUB    shift, and go to state 13
    LEN    shift, and go to state 15
    '('    shift, and go to state 38

    start_int_expr  go to state 43
    int_expr        go to state 23
    int_term        go to state 24
    int_pow         go to state 25
    int_factor      go to state 26
    float_expr      go to state 44
    float_term      go to state 29
    float_pow       go to state 30
    float_factor    go to state 31


State 9

   99 str_expr: STRING •

    $default  reduce using rule 99 (str_expr)


State 10

    8 expr: ID • ASSIGN str_expr
   11 arit_expr: ID • ASSIGN int_expr
   12          | ID • ASSIGN float_expr
   96 bool_term: ID • ASSIGN bool_expr

    ASSIGN  shift, and go to state 45


State 11

    3 stmnt_list: COMM • '\n' stmnt_list

    '\n'  shift, and go to state 46


State 12

   16 int_expr: ADD • int_expr
   30 float_expr: ADD • float_expr

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 3
    PI     shift, and go to state 4
    E      shift, and go to state 5
    SIN    shift, and go to state 6
    COS    shift, and go to state 7
    TAN    shift, and go to state 8
    ADD    shift, and go to state 12
    SUB    shift, and go to state 13
    LEN    shift, and go to state 15
    '('    shift, and go to state 38

    start_int_expr  go to state 47
    int_expr        go to state 48
    int_term        go to state 24
    int_pow         go to state 25
    int_factor      go to state 26
    float_expr      go to state 49
    float_term      go to state 29
    float_pow       go to state 30
    float_factor    go to state 31


State 13

   15 int_expr: SUB • int_expr
   29 float_expr: SUB • float_expr

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 3
    PI     shift, and go to state 4
    E      shift, and go to state 5
    SIN    shift, and go to state 6
    COS    shift, and go to state 7
    TAN    shift, and go to state 8
    ADD    shift, and go to state 12
    SUB    shift, and go to state 13
    LEN    shift, and go to state 15
    '('    shift, and go to state 38

    start_int_expr  go to state 47
    int_expr        go to state 50
    int_term        go to state 24
    int_pow         go to state 25
    int_factor      go to state 26
    float_expr      go to state 51
    float_term      go to state 29
    float_pow       go to state 30
    float_factor    go to state 31


State 14

   93 bool_not: NOT • bool_term

    INT    shift, and go to state 1
    BOOL   shift, and go to state 2
    FLOAT  shift, and go to state 3
    PI     shift, and go to state 4
    E      shift, and go to state 5
    SIN    shift, and go to state 6
    COS    shift, and go to state 7
    TAN    shift, and go to state 8
    ID     shift, and go to state 52
    ADD    shift, and go to state 12
    SUB    shift, and go to state 13
    NOT    shift, and go to state 14
    LEN    shift, and go to state 15
    '('    shift, and go to state 17

    start_int_expr    go to state 53
    int_expr          go to state 23
    int_term          go to state 24
    int_pow           go to state 25
    int_factor        go to state 26
    start_float_expr  go to state 54
    float_expr        go to state 28
    float_term        go to state 29
    float_pow         go to state 30
    float_factor      go to state 31
    bool_expr         go to state 55
    bool_orr          go to state 33
    bool_and          go to state 34
    bool_not          go to state 35
    bool_term         go to state 56


State 15

   14 int_expr: LEN • str_expr

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 3
    PI      shift, and go to state 4
    E       shift, and go to state 5
    SIN     shift, and go to state 6
    COS     shift, and go to state 7
    TAN     shift, and go to state 8
    STRING  shift, and go to state 9
    ADD     shift, and go to state 12
    SUB     shift, and go to state 13
    LEN     shift, and go to state 15
    SUBSTR  shift, and go to state 16
    '('     shift, and go to state 38

    start_int_expr    go to state 57
    int_expr          go to state 23
    int_term          go to state 24
    int_pow           go to state 25
    int_factor        go to state 26
    start_float_expr  go to state 58
    float_expr        go to state 28
    float_term        go to state 29
    float_pow         go to state 30
    float_factor      go to state 31
    str_expr          go to state 59


State 16

  105 str_expr: SUBSTR • str_expr start_int_expr start_int_expr

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 3
    PI      shift, and go to state 4
    E       shift, and go to state 5
    SIN     shift, and go to state 6
    COS     shift, and go to state 7
    TAN     shift, and go to state 8
    STRING  shift, and go to state 9
    ADD     shift, and go to state 12
    SUB     shift, and go to state 13
    LEN     shift, and go to state 15
    SUBSTR  shift, and go to state 16
    '('     shift, and go to state 38

    start_int_expr    go to state 57
    int_expr          go to state 23
    int_term          go to state 24
    int_pow           go to state 25
    int_factor        go to state 26
    start_float_expr  go to state 58
    float_expr        go to state 28
    float_term        go to state 29
    float_pow         go to state 30
    float_factor      go to state 31
    str_expr          go to state 60


State 17

   27 int_factor: '(' • int_expr ')'
   63 float_factor: '(' • float_expr ')'
   98 bool_term: '(' • bool_expr ')'

    INT    shift, and go to state 1
    BOOL   shift, and go to state 2
    FLOAT  shift, and go to state 3
    PI     shift, and go to state 4
    E      shift, and go to state 5
    SIN    shift, and go to state 6
    COS    shift, and go to state 7
    TAN    shift, and go to state 8
    ID     shift, and go to state 52
    ADD    shift, and go to state 12
    SUB    shift, and go to state 13
    NOT    shift, and go to state 14
    LEN    shift, and go to state 15
    '('    shift, and go to state 17

    start_int_expr    go to state 53
    int_expr          go to state 61
    int_term          go to state 24
    int_pow           go to state 25
    int_factor        go to state 26
    start_float_expr  go to state 54
    float_expr        go to state 62
    float_term        go to state 29
    float_pow         go to state 30
    float_factor      go to state 31
    bool_expr         go to state 63
    bool_orr          go to state 33
    bool_and          go to state 34
    bool_not          go to state 35
    bool_term         go to state 36


State 18

    0 $accept: calculator • $end

    $end  shift, and go to state 64


State 19

    1 calculator: stmnt_list •

    $default  reduce using rule 1 (calculator)


State 20

    2 stmnt_list: expr • '\n' stmnt_list

    '\n'  shift, and go to state 65


State 21

    5 expr: arit_expr •

    $default  reduce using rule 5 (expr)


State 22

    9 arit_expr: start_int_expr •
   32 float_expr: start_int_expr • ADD float_term
   35           | start_int_expr • SUB float_term
   39 float_term: start_int_expr • MUL float_pow
   42           | start_int_expr • DIV start_int_expr
   43           | start_int_expr • DIV float_pow
   46           | start_int_expr • MOD float_pow
   50 float_pow: start_int_expr • POW float_factor
   64 bool_expr: start_int_expr • HIG start_int_expr
   65          | start_int_expr • HEQ start_int_expr
   66          | start_int_expr • LOW start_int_expr
   67          | start_int_expr • LEQ start_int_expr
   68          | start_int_expr • EQU start_int_expr
   69          | start_int_expr • NEQ start_int_expr
   76          | start_int_expr • HIG start_float_expr
   77          | start_int_expr • HEQ start_float_expr
   78          | start_int_expr • LOW start_float_expr
   79          | start_int_expr • LEQ start_float_expr
   80          | start_int_expr • EQU start_float_expr
   81          | start_int_expr • NEQ start_float_expr
  102 str_expr: start_int_expr • ADD str_expr

    ADD  shift, and go to state 66
    SUB  shift, and go to state 67
    MUL  shift, and go to state 68
    DIV  shift, and go to state 69
    MOD  shift, and go to state 70
    POW  shift, and go to state 71
    HIG  shift, and go to state 72
    HEQ  shift, and go to state 73
    LOW  shift, and go to state 74
    LEQ  shift, and go to state 75
    EQU  shift, and go to state 76
    NEQ  shift, and go to state 77

    $default  reduce using rule 9 (arit_expr)


State 23

   13 start_int_expr: int_expr •
   17 int_expr: int_expr • ADD int_term
   18         | int_expr • SUB int_term
   26 int_factor: int_expr •

    ADD  shift, and go to state 78
    SUB  shift, and go to state 79

    INT       reduce using rule 13 (start_int_expr)
    INT       [reduce using rule 26 (int_factor)]
    ADD       [reduce using rule 13 (start_int_expr)]
    ADD       [reduce using rule 26 (int_factor)]
    SUB       [reduce using rule 13 (start_int_expr)]
    SUB       [reduce using rule 26 (int_factor)]
    MUL       reduce using rule 13 (start_int_expr)
    MUL       [reduce using rule 26 (int_factor)]
    DIV       reduce using rule 13 (start_int_expr)
    DIV       [reduce using rule 26 (int_factor)]
    MOD       reduce using rule 13 (start_int_expr)
    MOD       [reduce using rule 26 (int_factor)]
    POW       reduce using rule 13 (start_int_expr)
    POW       [reduce using rule 26 (int_factor)]
    HIG       reduce using rule 13 (start_int_expr)
    HIG       [reduce using rule 26 (int_factor)]
    HEQ       reduce using rule 13 (start_int_expr)
    HEQ       [reduce using rule 26 (int_factor)]
    LOW       reduce using rule 13 (start_int_expr)
    LOW       [reduce using rule 26 (int_factor)]
    LEQ       reduce using rule 13 (start_int_expr)
    LEQ       [reduce using rule 26 (int_factor)]
    EQU       reduce using rule 13 (start_int_expr)
    EQU       [reduce using rule 26 (int_factor)]
    NEQ       reduce using rule 13 (start_int_expr)
    NEQ       [reduce using rule 26 (int_factor)]
    AND       reduce using rule 13 (start_int_expr)
    AND       [reduce using rule 26 (int_factor)]
    ORR       reduce using rule 13 (start_int_expr)
    ORR       [reduce using rule 26 (int_factor)]
    LEN       reduce using rule 13 (start_int_expr)
    LEN       [reduce using rule 26 (int_factor)]
    '\n'      reduce using rule 13 (start_int_expr)
    '\n'      [reduce using rule 26 (int_factor)]
    '('       reduce using rule 13 (start_int_expr)
    '('       [reduce using rule 26 (int_factor)]
    ')'       reduce using rule 13 (start_int_expr)
    ')'       [reduce using rule 26 (int_factor)]
    $default  reduce using rule 13 (start_int_expr)


State 24

   19 int_expr: int_term •
   20 int_term: int_term • MUL int_pow
   21         | int_term • MOD int_pow

    MUL  shift, and go to state 80
    MOD  shift, and go to state 81

    MUL       [reduce using rule 19 (int_expr)]
    MOD       [reduce using rule 19 (int_expr)]
    $default  reduce using rule 19 (int_expr)


State 25

   22 int_term: int_pow •
   23 int_pow: int_pow • POW int_factor

    POW  shift, and go to state 82

    POW       [reduce using rule 22 (int_term)]
    $default  reduce using rule 22 (int_term)


State 26

   24 int_pow: int_factor •

    $default  reduce using rule 24 (int_pow)


State 27

   10 arit_expr: start_float_expr •
   70 bool_expr: start_float_expr • HIG start_float_expr
   71          | start_float_expr • HEQ start_float_expr
   72          | start_float_expr • LOW start_float_expr
   73          | start_float_expr • LEQ start_float_expr
   74          | start_float_expr • EQU start_float_expr
   75          | start_float_expr • NEQ start_float_expr
   82          | start_float_expr • HIG start_int_expr
   83          | start_float_expr • HEQ start_int_expr
   84          | start_float_expr • LOW start_int_expr
   85          | start_float_expr • LEQ start_int_expr
   86          | start_float_expr • EQU start_int_expr
   87          | start_float_expr • NEQ start_int_expr
  104 str_expr: start_float_expr • ADD str_expr

    ADD  shift, and go to state 83
    HIG  shift, and go to state 84
    HEQ  shift, and go to state 85
    LOW  shift, and go to state 86
    LEQ  shift, and go to state 87
    EQU  shift, and go to state 88
    NEQ  shift, and go to state 89

    $default  reduce using rule 10 (arit_expr)


State 28

   28 start_float_expr: float_expr •
   31 float_expr: float_expr • ADD float_term
   33           | float_expr • ADD start_int_expr
   34           | float_expr • SUB float_term
   36           | float_expr • SUB start_int_expr
   62 float_factor: float_expr •

    ADD  shift, and go to state 90
    SUB  shift, and go to state 91

    INT       reduce using rule 28 (start_float_expr)
    INT       [reduce using rule 62 (float_factor)]
    ADD       [reduce using rule 28 (start_float_expr)]
    ADD       [reduce using rule 62 (float_factor)]
    SUB       [reduce using rule 28 (start_float_expr)]
    SUB       [reduce using rule 62 (float_factor)]
    MUL       reduce using rule 28 (start_float_expr)
    MUL       [reduce using rule 62 (float_factor)]
    DIV       reduce using rule 28 (start_float_expr)
    DIV       [reduce using rule 62 (float_factor)]
    MOD       reduce using rule 28 (start_float_expr)
    MOD       [reduce using rule 62 (float_factor)]
    POW       reduce using rule 28 (start_float_expr)
    POW       [reduce using rule 62 (float_factor)]
    HIG       reduce using rule 28 (start_float_expr)
    HIG       [reduce using rule 62 (float_factor)]
    HEQ       reduce using rule 28 (start_float_expr)
    HEQ       [reduce using rule 62 (float_factor)]
    LOW       reduce using rule 28 (start_float_expr)
    LOW       [reduce using rule 62 (float_factor)]
    LEQ       reduce using rule 28 (start_float_expr)
    LEQ       [reduce using rule 62 (float_factor)]
    EQU       reduce using rule 28 (start_float_expr)
    EQU       [reduce using rule 62 (float_factor)]
    NEQ       reduce using rule 28 (start_float_expr)
    NEQ       [reduce using rule 62 (float_factor)]
    AND       reduce using rule 28 (start_float_expr)
    AND       [reduce using rule 62 (float_factor)]
    ORR       reduce using rule 28 (start_float_expr)
    ORR       [reduce using rule 62 (float_factor)]
    LEN       reduce using rule 28 (start_float_expr)
    LEN       [reduce using rule 62 (float_factor)]
    '\n'      reduce using rule 28 (start_float_expr)
    '\n'      [reduce using rule 62 (float_factor)]
    '('       reduce using rule 28 (start_float_expr)
    '('       [reduce using rule 62 (float_factor)]
    ')'       reduce using rule 28 (start_float_expr)
    ')'       [reduce using rule 62 (float_factor)]
    $default  reduce using rule 28 (start_float_expr)


State 29

   37 float_expr: float_term •
   38 float_term: float_term • MUL float_pow
   40           | float_term • MUL start_int_expr
   41           | float_term • DIV float_pow
   44           | float_term • DIV start_int_expr
   45           | float_term • MOD float_pow
   47           | float_term • MOD start_int_expr

    MUL  shift, and go to state 92
    DIV  shift, and go to state 93
    MOD  shift, and go to state 94

    MUL       [reduce using rule 37 (float_expr)]
    DIV       [reduce using rule 37 (float_expr)]
    MOD       [reduce using rule 37 (float_expr)]
    $default  reduce using rule 37 (float_expr)


State 30

   48 float_term: float_pow •
   49 float_pow: float_pow • POW float_factor
   51          | float_pow • POW start_int_expr

    POW  shift, and go to state 95

    POW       [reduce using rule 48 (float_term)]
    $default  reduce using rule 48 (float_term)


State 31

   52 float_pow: float_factor •

    $default  reduce using rule 52 (float_pow)


State 32

    6 expr: bool_expr •
   97 bool_term: bool_expr •

    '\n'      reduce using rule 6 (expr)
    '\n'      [reduce using rule 97 (bool_term)]
    $default  reduce using rule 97 (bool_term)


State 33

   88 bool_expr: bool_orr •
   89 bool_orr: bool_orr • ORR bool_and

    ORR  shift, and go to state 96

    ORR       [reduce using rule 88 (bool_expr)]
    $default  reduce using rule 88 (bool_expr)


State 34

   90 bool_orr: bool_and •
   91 bool_and: bool_and • AND bool_not

    AND  shift, and go to state 97

    AND       [reduce using rule 90 (bool_orr)]
    $default  reduce using rule 90 (bool_orr)


State 35

   92 bool_and: bool_not •

    $default  reduce using rule 92 (bool_and)


State 36

   94 bool_not: bool_term •

    $default  reduce using rule 94 (bool_not)


State 37

    7 expr: str_expr •
  100 str_expr: str_expr • ADD str_expr
  101         | str_expr • ADD start_int_expr
  103         | str_expr • ADD start_float_expr

    ADD  shift, and go to state 98

    $default  reduce using rule 7 (expr)


State 38

   27 int_factor: '(' • int_expr ')'
   63 float_factor: '(' • float_expr ')'

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 3
    PI     shift, and go to state 4
    E      shift, and go to state 5
    SIN    shift, and go to state 6
    COS    shift, and go to state 7
    TAN    shift, and go to state 8
    ADD    shift, and go to state 12
    SUB    shift, and go to state 13
    LEN    shift, and go to state 15
    '('    shift, and go to state 38

    start_int_expr  go to state 47
    int_expr        go to state 61
    int_term        go to state 24
    int_pow         go to state 25
    int_factor      go to state 26
    float_expr      go to state 99
    float_term      go to state 29
    float_pow       go to state 30
    float_factor    go to state 31


State 39

   32 float_expr: start_int_expr • ADD float_term
   35           | start_int_expr • SUB float_term
   39 float_term: start_int_expr • MUL float_pow
   42           | start_int_expr • DIV start_int_expr
   43           | start_int_expr • DIV float_pow
   46           | start_int_expr • MOD float_pow
   50 float_pow: start_int_expr • POW float_factor
   57 float_factor: SIN start_int_expr •

    ADD  shift, and go to state 100
    SUB  shift, and go to state 67
    MUL  shift, and go to state 68
    DIV  shift, and go to state 69
    MOD  shift, and go to state 70
    POW  shift, and go to state 71

    ADD       [reduce using rule 57 (float_factor)]
    SUB       [reduce using rule 57 (float_factor)]
    MUL       [reduce using rule 57 (float_factor)]
    DIV       [reduce using rule 57 (float_factor)]
    MOD       [reduce using rule 57 (float_factor)]
    POW       [reduce using rule 57 (float_factor)]
    $default  reduce using rule 57 (float_factor)


State 40

   31 float_expr: float_expr • ADD float_term
   33           | float_expr • ADD start_int_expr
   34           | float_expr • SUB float_term
   36           | float_expr • SUB start_int_expr
   56 float_factor: SIN float_expr •
   62             | float_expr •

    ADD  shift, and go to state 90
    SUB  shift, and go to state 91
